manifests/jellyfin/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
#      tolerations:
#        - key: "arch"
#          operator: "Equal"
#          value: "amd64"
#          effect: "NoSchedule"
#      nodeSelector:
#        kubernetes.io/arch: amd64
      containers:
      - env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        #image: docker.io/jellyfin/jellyfin:latest
        image: registry.lan.ccrow.org/jellyfin/jellyfin:latest
        imagePullSecrets:
        - name: registry-secret
        imagePullPolicy: IfNotPresent
        name: jellyfin
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /data/movies
          name: movies 
        - mountPath: /data/plex-norepl
          name: plex-norepl
        - mountPath: /data/tv
          name: tv
        - mountPath: /data/music
          name: music     
        - mountPath: /config
          name: jellyfin-config
      restartPolicy: Always
      volumes:
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: movies
        nfs:
          server: 10.0.2.8
          path: /volume1/Movies
      - name: plex-norepl
        nfs:
          server: 10.0.2.8
          path: /volume1/Plex-norepl
      - name: tv
        nfs:
          server: 10.0.2.8
          path: /volume1/TV
      - name: music
        nfs:
          server: 10.0.2.8
          path: /volume1/Music
