manifests/jellyfin/base/ingress.yaml
# For microk8s default nginx ingress controller (enable by running 'microk8s enable ingress')

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: jellyfin-ingress
 annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
 ingressClassName: nginx
 tls:
 - hosts:
   - jellyfin.ccrow.org
   secretName: jellyfin-tls-secret
 rules:
 - host: jellyfin.ccrow.org
   http:
     paths:
     - backend:
         service:
           name: jellyfin
           port:
             number: 8096
       path: /
       pathType: Prefix
