manifests/jellyfin/base/jellystat.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: jellyfin
  name: jellystat-db
spec:
  serviceName: jellystat-db
  replicas: 1
  selector:
    matchLabels:
      app: jellystat-db
  template:
    metadata:
      labels:
        app: jellystat-db
    spec:
      containers:
      - name: postgres
        image: postgres:15.2
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "1Gi"
      volumes: []
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jellyfin
  name: jellystat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellystat
  template:
    metadata:
      labels:
        app: jellystat
    spec:
      containers:
      - name: jellystat
        image: cyfershepard/jellystat:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: jellystat-backup-data
          mountPath: /app/backend/backup-data
      volumes:
      - name: jellystat-backup-data
        persistentVolumeClaim:
          claimName: jellystat-backup-data
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellystat-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  namespace: jellyfin
spec:
  tls:
  - hosts:
    - jellystat.lan.ccrow.org
    secretName: jellystat-tls
  rules:
  - host: jellystat.lan.ccrow.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellystat
            port:
              number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jellystat
  namespace: jellyfin
spec:
  selector:
    app: jellystat
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jellystat-db
  namespace: jellyfin
spec:
  clusterIP: None
  selector:
    app: jellystat-db
  ports:
    - protocol: TCP
      port: 5432
